home page : nb results ADDED in page display

--- a/templates/home.html
+++ b/templates/home.html
@@ -31,7 +31,7 @@
 
 
 			</div>
-				<p>RESULTATS</p>
+				<p>RESULTATS ({{length}})</p>
 			<div id="results">
 				{% for item in infos: %}
 						<div class="result_table">
