--- a/static/css/my_style.css
+++ b/static/css/my_style.css
@@ -88,6 +88,15 @@ input {
     margin: 2% 0 2% 0;
 }
 
+.filters{
+    background-color: #333333;
+    color: white;
+    border: 2px solid black;
+    border-radius: 15px;
+    padding-bottom: 2%;
+
+}
+
 #results{
     margin: auto 0 auto 0;
     display: flex;
