--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 
 	{% block body %}
 		<div id="search_found">
-			<div class="inline">
+			<div class="filters">
 
 				
 				<form name="filtres" method="post" action="/search">
@@ -16,14 +16,17 @@
 					<input type="number" name="age_min" min="18" max="70" onblur="checkMax('age')">
 					et :
 					<input type="number" name="age_max" max="40">
-				 | pop_score entre : 
+				<p/>
+				 <p> pop_score entre : 
 					<input type="number" name="pop_score_min" step="10" min="0" max="1000" onblur="checkMax('pop_score')">
 					et :
 					<input type="number" name="pop_score_max" step="10" max="1000">
 				 </p>
+
 				 <p>localisation : 
-					<input type="number" name="location" step="10" min="0" max="1000"> autour de moi.
-				 | nombre de tags en commun : 
+					<input type="number" name="location" step="10" min="0" max="1000">km autour de moi.
+				 </p>
+				 <p> nombre de tags en commun : 
 					<input type="number" name="interests" min="0" max="10">
 				</p>
 				<input type="submit" name="submit" value="Rechercher">
