--- a/templates/profile.html
+++ b/templates/profile.html
@@ -226,13 +226,14 @@
 
 			<div class="inline" name="interests" {% if infos['is_user_me'] == True %} onmouseenter="displayForm('interests')"  {% endif %}>
 				<div>Intérêts:</div>
+				<ul>
 				{% for item in infos['interests']:%}
-				<p>{{ item['value'] + ", " }}</p>
+				<li>{{ item['value']}}</li>
 				{%endfor%}
+				</ul>
 				
 				{% if infos['is_user_me'] == True %}
 				<form name="form_interests" action="/profile_modifications" method="post" hidden>
-					<!-- <input type="text" name="interests" placeholder="{{ infos['interests'] }}"> -->
 					<input type="text" name="interests" list="tags">
 					<datalist id="tags">
 					{% for tag in tags: %}
