profile page: interest's tags up and running w/ poss of delete | home page : sorted divs around for the comming-soon-results-sort | messenger : message added when no match

--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -28,9 +28,10 @@ form{
 }
 
 .inline{
-    display: inline-flex;
+    /*display: inline-flex;*/
     margin: 0px 5px 0px 5px;
-    justify-content: center;
+    /*margin: 10% 10% 10% 10%;*/
+    /*justify-content: center;*/
 }
 
 #box_right{
