home page : setting sortby age: OK | pop_score: OK | need to do location and tags

--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -61,6 +61,7 @@ form{
 #username, #pop_score{
     font-weight: bold;
     font-size: x-large;
+    word-wrap: break-word;
 }
 
 #first_name, #last_name{
